# twitch-news-ticker

./: CMakeLists.txt  build.sh  buildRelease.bat
contrib/gl-matrix-stack/: gl-matrix-stack.h
contrib/kirc/: CMakeLists.txt  buildDebug.sh
shaders/: font.frag  font.vert  funometer.frag  funometer.vert
src/: CMakeLists.txt  common.h  main.c  main.h  news_window.c  news_window.h
